[gd_scene load_steps=3 format=3 uid="uid://clqfe5502ra1p"]

[ext_resource type="Script" path="res://hud/hud_altitude_scale.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://cmrbcb2sgf4bh" path="res://hud/hud_bidirectional_gauge.tscn" id="3"]

[node name="HUDAltitudeScale" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -59.5
offset_right = 157.0
offset_bottom = 59.5

[node name="AltitudeGauge" parent="HBoxContainer" instance=ExtResource("3")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
width = 4
max_value = 10.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="LabelRadioAltitude" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 5
text = "R---"

[node name="LabelAltitude" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 5
text = "-0000.0"

[node name="LabelVerticalSpeed" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 5
text = "-00.0 VS"
